nav section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+
+        <!-- nav section -->
+            <nav class="nav-ber">
+                <div class="nav-logo">
+                    <img src="asset/logo/logo.png" alt="" class="nav-icon">
+                </div>
+                <div class="nav-menu">
+                    <li class="menu-item">Home</li>
+                    <li class="menu-item">Service</li>
+                    <li class="menu-item">About</li>
+                    <li class="menu-item">Contact</li>
+                </div>
+            </nav>
+
+    </header>
 </body>
 </html>
