banner section done

--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
 
         <!-- nav section -->
-            <nav class="nav-ber">
-                <div class="nav-logo">
-                    <img src="asset/logo/logo.png" alt="" class="nav-icon">
-                </div>
-                <div class="nav-menu">
-                    <li class="menu-item">Home</li>
-                    <li class="menu-item">Service</li>
-                    <li class="menu-item">About</li>
-                    <li class="menu-item">Contact</li>
-                </div>
-            </nav>
+        <nav class="nav-ber">
+            <div class="nav-logo">
+                <img src="asset/logo/logo.png" alt="" class="nav-icon">
+            </div>
+            <div class="nav-menu">
+                <li class="menu-item">Home</li>
+                <li class="menu-item">Service</li>
+                <li class="menu-item">About</li>
+                <li class="menu-item">Contact</li>
+            </div>
+        </nav>
 
+        <!-- banner section -->
+        <div class="banner">
+            <div class="banner-description">
+                <h1 class="banner-title"><span class="digital">Digital</span> Agency You <br>Can Rely Upon!</h1>
+                <p class="banner-info">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh <br>adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+                <button class="banner-btn-1">DISCOVER MORE</button>
+                <button class="banner-btn-2">HIRE US NOW</button>
+            </div>
+        </div>
     </header>
 </body>
+
 </html>
