service section done

--- a/index.html
+++ b/index.html
@@ -28,12 +28,67 @@
         <div class="banner">
             <div class="banner-description">
                 <h1 class="banner-title"><span class="digital">Digital</span> Agency You <br>Can Rely Upon!</h1>
-                <p class="banner-info">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh <br>adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+                <p class="banner-info">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus,
+                    nibh <br>adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
                 <button class="banner-btn-1">DISCOVER MORE</button>
                 <button class="banner-btn-2">HIRE US NOW</button>
             </div>
         </div>
     </header>
+
+    <!-- service section -->
+    <main>
+        <div class="service">
+            <div class="elements">
+                <button class="service-btn">Service List</button>
+                <h1 class="service-title"><span class="services">Services</span> We Can Help You With!</h1>
+                <p class="service-info">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra
+                    libero habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.
+                </p>
+                <ol class="list">
+                    <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                    <li>Ipsum dui curabitur dapibuish mollitia.</li>
+                </ol>
+                <div class="author">
+                    <div class="author-row">
+                        <div>
+                            <img class="profile" src="asset/image/author.jpg" alt=""></div>
+                        <div class="author-info">
+                            <h4>George Smith</h4>
+                            <h6>CEO, Director</h6>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="author-btn">MORE DETAILS</button>
+                    </div>
+                </div>
+            </div>
+            <div class="boxes">
+                <div class="first-2-box">
+                    <div class="box">
+                        <img src="asset/icons/coding.png" alt="" class="icon">
+                        <h3 class="icon-info">Website Development
+                        </h3>
+                    </div>
+                    <div class="box">
+                        <img src="asset/icons/bar-chart.png" alt="" class="icon">
+                        <h3 class="icon-info">Graphic & Sketch Designing</h3>
+                    </div>
+                </div>
+                <div class="last-2-box">
+                    <div class="box">
+                        <img src="asset/icons/startup.png" alt="" class="icon">
+                        <h3 class="icon-info">Website Development
+                        </h3>
+                    </div>
+                    <div class="box">
+                        <img src="asset/icons/digital-marketing.png" alt="" class="icon">
+                        <h3 class="icon-info">Graphic & Sketch Designing</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
