appointment section done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="elements">
                 <button class="service-btn">Service List</button>
                 <h1 class="service-title"><span class="services">Services</span> We Can Help You With!</h1>
-                <p class="service-info">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra
+                <p class="service-info">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro
+                    viverra
                     libero habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.
                 </p>
                 <ol class="list">
@@ -52,7 +53,8 @@
                 <div class="author">
                     <div class="author-row">
                         <div>
-                            <img class="profile" src="asset/image/author.jpg" alt=""></div>
+                            <img class="profile" src="asset/image/author.jpg" alt="">
+                        </div>
                         <div class="author-info">
                             <h4>George Smith</h4>
                             <h6>CEO, Director</h6>
@@ -86,6 +88,26 @@
                         <h3 class="icon-info">Graphic & Sketch Designing</h3>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- appointment section -->
+        <div class="appointment">
+            <div class="phone">
+                <div>
+                    <img class="phone-icon" src="asset/icons/phone-call.png" alt="">
+                </div>
+                <div>
+                    <h6 class="phone-title">GET A FREE CONSULTATION</h6>
+                    <h1 class="phone-num">987 233 0000</h1>
+                </div>
+            </div>
+            <div class="appointment-info">
+                <P>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra libero habitasse
+                    Aut ab nibh aliqua optio veniet porro viverr.</P>
+            </div>
+            <div>
+                <button class="appointment-btn">MAKE APPOINTMENT</button>
             </div>
         </div>
     </main>
