--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@
                 <button class="appointment-btn">MAKE APPOINTMENT</button>
             </div>
         </div>
+
+        <!-- blog section -->
+        <div class="blog">
+            <h1 class="blog-title"><span class="blog-span">Blog</span> & News From Us!</h1>
+            <p class="blog-info">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id natus non nisl provident justo.</p>
+            <div class="cards">
+                <div class="card">
+                    <img src="asset/image/blog-1.jpg" alt="" class="card-img">
+                    <h2 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+                    <p class="card-info">Malesuada error laudantium quibusdam, voluptas recusance, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card">
+                    <img src="asset/image/blog-1.jpg" alt="" class="card-img">
+                    <h2 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+                    <p class="card-info">Malesuada error laudantium quibusdam, voluptas recusance, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card">
+                    <img src="asset/image/blog-1.jpg" alt="" class="card-img">
+                    <h2 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+                    <p class="card-info">Malesuada error laudantium quibusdam, voluptas recusance, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
